force-app/main/default/objects/Opportunity_Pipeline_Snapshot__c/Opportunity_Pipeline_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Opportunity Pipeline Snapshot</label>
    <nameField>
        <label>Opportunity Pipeline Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Pipeline Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>