force-app/main/default/objects/Opportunity_Pipeline_Snapshot__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <label>Market Segment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>