force-app/main/default/objects/Opportunity_Pipeline_Snapshot__c/fields/Material_Master__c.field-meta.xml
<CustomField>
    <fullName>Material_Master__c</fullName>
    <label>Material Master</label>
    <length>255</length>
    <type>Text</type>
</CustomField>